<resources>
    <string name="app_name">Daima</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_aia">AI</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="go">GO</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">OTP</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="week1">Week 1</string>
    <string name="week2">Week 2</string>
    <string name="week3">Week 3</string>
    <string name="week4">Week 4</string>
    <string name="month1">Month 1</string>
    <string name="month2">Month 2</string>
    <string name="month3">Month 3</string>
    <string name="month4">Month 4</string>
    <string name="month5">Month 5</string>
    <string name="month6">Month 6</string>
    <string name="month7">Month 7</string>
    <string name="month8">Month 8</string>
    <string name="month9">Month 9</string>

    <string name="month1_text">Congrats!!!!  you are soon going to have a baby… \nA simple fitness plan for women in their first trimester. Always, check with your healthcare provider before starting this or any other exercise program, and STOP if anything is painful.</string>
    <string name="month2_text">Baby is growing so is the need for 100% fit mommy…… stay fit and awesome for fit baby. But don’t take much pain.</string>
    <string name="month3_text">Baby wants mommy to be happy and fit…… workout at your own pace and don\'t over exert yourself. Do this workout daily. Here are workout dos and don\'ts while pregnant: Stay in Shape, Tone those Muscles and Feel Fantastic.</string>
    <string name="month4_text">want to stay fit mommy then keep up the spirit and keep exercising……. Follow these exercises as demonstrated.</string>
    <string name="month5_text">Working out during the second trimester of pregnancy generally feels great! After battling nausea and fatigue during the first trimester, most women feel a surge of energy. As always, make sure you consult your obstetrician before you engage in any physical activity.</string>
    <string name="month6_text">Keeping in good shape while you’re pregnant is one of the best things you can do for yourself and your baby. The other is to eat a healthy diet, but you knew that already! Exercise will help you gain an appropriate amount of weight without putting on too much, and it will get you ready for the rigors of birth. It can also help you feel better and sleep better.</string>
    <string name="month7_text">your baby is out into this world. Your exercise should not stop but continue even as your bump grows bigger and bigger. </string>
    <string name="month8_text">Month 8</string>
    <string name="month9_text">Month 9</string>
    <string name="month1week1"></string>
    <string name="month1week2"></string>
    <string name="month1week3"></string>
    <string name="month1week4"></string>
    <string name="month2week1"></string>
    <string name="month2week2"></string>
    <string name="month2week3"></string>
    <string name="month2week4"></string>
    <string name="month3week1"></string>
    <string name="month3week2"></string>
    <string name="month3week3"></string>
    <string name="month3week4"></string>
    <string name="month4week1"></string>
    <string name="month4week2"></string>
    <string name="month4week3"></string>
    <string name="month4week4"></string>
    <string name="month5week1"></string>
    <string name="month5week2"></string>
    <string name="month5week3"></string>
    <string name="month5week4"></string>
    <string name="month6week1"></string>
    <string name="month6week2"></string>
    <string name="month6week3"></string>
    <string name="month6week4"></string>
    <string name="month7week1"></string>
    <string name="month7week2"></string>
    <string name="month7week3"></string>
    <string name="month7week4"></string>
    <string name="month8week1"></string>
    <string name="month8week2"></string>
    <string name="month8week3"></string>
    <string name="month8week4"></string>
    <string name="month9week1"></string>
    <string name="month9week2"></string>
    <string name="month9week3"></string>
    <string name="month9week4"></string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer faucibus eros dignissim massa aliquet feugiat. Nunc aliquam sapien ipsum, quis dapibus augue maximus non. Suspendisse suscipit maximus luctus. In sit amet metus ut sapien consectetur lacinia at at ligula. Suspendisse et consequat erat, vitae dignissim ex. Nulla elit libero, ultrices eu erat et, laoreet auctor justo. Nulla vel lectus in neque dapibus hendrerit non ut ex. Duis ut eros posuere, convallis nibh in, tempus diam. Mauris vulputate fringilla feugiat. Nam dignissim purus sed lacus elementum pretium. Aliquam turpis felis, congue eu neque ut, varius dignissim tortor. Integer semper suscipit lorem, non eleifend lacus sagittis in. Pellentesque vel metus magna.

Pellentesque dictum velit nulla, vel pulvinar magna interdum eget. Fusce molestie ac nisi lacinia viverra. Aenean faucibus, nulla et posuere finibus, diam felis viverra lacus, ut vulputate arcu odio id massa. Nam et pretium neque. Nam consequat felis a nulla facilisis rutrum. Maecenas est risus, feugiat ut tellus a, rhoncus ultrices felis. Donec imperdiet mollis lacinia. Morbi mauris mi, vulputate in ultrices sit amet, auctor at eros. Aenean rutrum, est placerat porttitor mattis, dui elit laoreet sem, mollis sagittis lectus velit sed dui. Donec et nisl nec libero egestas aliquam eu vitae sapien.</string>
</resources>
