<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daima.trycatch.daima.MonthSelect">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month2"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month3"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month4"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month5"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month6"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month7"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month8"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/month9"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
